k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: clavis1passsync
spec:
  selector:
    app: clavis1passsync
  ports:
    - name: http
      port: 80
      targetPort: http
