k8s/full.yaml

---
# Step 1. Namespace creation.
apiVersion: v1
kind: Namespace
metadata:
  name: clavis1pass
  labels:
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/audit-version: latest
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/warn: privileged
    pod-security.kubernetes.io/warn-version: latest
---
# Step 2. Deployment.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: clavis1passsync
  labels:
    app: clavis1passsync
spec:
  replicas: 1
  selector:
    matchLabels:
      app: clavis1passsync
  template:
    metadata:
      labels:
        app: clavis1passsync
    spec:
      securityContext:
        runAsNonRoot: true
      containers:
        - name: clavis1passsync
          # Replace with your pushed image reference.
          image: registry.shore.ox.ac.uk/onepass/clavis1passsync:latest
          ports:
            - name: http
              containerPort: 5000
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 3
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 10
            periodSeconds: 20
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false
---
# Step 3. Service
apiVersion: v1
kind: Service
metadata:
  name: clavis1passsync
spec:
  selector:
    app: clavis1passsync
  ports:
    - name: http
      port: 80
      targetPort: http
---
# Step 6. HTTPProxy to expose the app service.
kind: HTTPProxy
apiVersion: projectcontour.io/v1
metadata:
  name: clavis1pass-ingress
  namespace: clavis1pass
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/ingress.class: contour
    kubernetes.io/tls-acme: "true"
spec:
  virtualhost:
    fqdn: clavis1pass.shore.ox.ac.uk
    tls:
      secretName: clavis1pass-cert-secret
  routes:
    - conditions:
      - prefix: /
      services:
      - name: clavis1pass-svc
        port: 80
